--- a/src/main/resources/to/sava/comicripper/main.fxml
+++ b/src/main/resources/to/sava/comicripper/main.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="to.sava.comicripper.MainController"
-            prefHeight="320.0" prefWidth="480.0">
-
-</AnchorPane>
+            fx:id="pane"
+>
+    <top>
+        <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
+            <Button mnemonicParsing="false" text="Button"/>
+        </ToolBar>
+    </top>
+    <center>
+        <ScrollPane>
+            <VBox fx:id="comicsList" BorderPane.alignment="CENTER"/>
+        </ScrollPane>
+    </center>
+</BorderPane>
