--- a/src/main/resources/to/sava/comicripper/main.fxml
+++ b/src/main/resources/to/sava/comicripper/main.fxml
@@ -7,6 +7,7 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="to.sava.comicripper.MainController"
             fx:id="pane"
+            stylesheets="@common.css"
 >
     <top>
         <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
