[WIP] 設定値が自動的に保存されるようにした．あと CSS とかちょっとまとめた．

--- a/src/main/resources/to/sava/comicripper/comic.fxml
+++ b/src/main/resources/to/sava/comicripper/comic.fxml
@@ -8,7 +8,7 @@
 <VBox xmlns="http://javafx.com/javafx/10.0.2-internal"
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="to.sava.comicripper.controller.ComicController"
-      fx:id="pane"
+      fx:id="comicScene"
       styleClass="comic"
       stylesheets="@common.css"
 >
