--- a/src/main/resources/to/sava/comicripper/main.fxml
+++ b/src/main/resources/to/sava/comicripper/main.fxml
@@ -6,8 +6,9 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="to.sava.comicripper.MainController"
-            fx:id="pane"
+            fx:id="mainScene"
             stylesheets="@common.css"
+            styleClass="main"
 >
     <top>
         <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
