[WIP] ファイル更新監視とドラッグ＆ドロップ編集の準備

--- a/src/main/resources/to/sava/comicripper/common.css
+++ b/src/main/resources/to/sava/comicripper/common.css
@@ -15,6 +15,14 @@
     -fx-border-width: 1;
 }
 
+.comic.dragged {
+    -fx-border-color: blue;
+}
+
+.comic.dragover {
+    -fx-border-color: red;
+}
+
 #cutterScene Button {
     -fx-pref-width: 150.0;
 }
