--- a/src/main/resources/to/sava/comicripper/cutter.fxml
+++ b/src/main/resources/to/sava/comicripper/cutter.fxml
@@ -39,7 +39,7 @@
     </center>
     <bottom>
         <TilePane prefHeight="36.0" alignment="CENTER" hgap="8.0">
-            <Button fx:id="button" text="決定" />
+            <Button fx:id="doCutting" text="決定" />
             <Button fx:id="cancel" text="キャンセル"/>
         </TilePane>
     </bottom>
