--- a/src/main/resources/to/sava/comicripper/main.fxml
+++ b/src/main/resources/to/sava/comicripper/main.fxml
@@ -18,6 +18,7 @@
             <Label text="題名:"/>
             <TextField fx:id="title" prefWidth="256"/>
             <Region prefWidth="16"/>
+            <Button text="再スキャン" fx:id="reload"/>
             <Button mnemonicParsing="false" text="Button" fx:id="button"/>
             <Label fx:id="label"/>
         </ToolBar>
