[WIP] ZIP化機能を実装．もうほぼ完成じゃね？

--- a/src/main/resources/to/sava/comicripper/main.fxml
+++ b/src/main/resources/to/sava/comicripper/main.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="to.sava.comicripper.MainController"
@@ -11,19 +12,23 @@
             styleClass="main"
 >
     <top>
-        <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
+        <ToolBar prefHeight="40.0">
             <Label text="作者:"/>
             <TextField fx:id="author" prefWidth="160"/>
-            <Region prefWidth="8"/>
             <Label text="題名:"/>
             <TextField fx:id="title" prefWidth="256"/>
-            <Region prefWidth="16"/>
-            <Button text="再スキャン" fx:id="reload"/>
-            <Button mnemonicParsing="false" text="Button" fx:id="button"/>
-            <Label fx:id="label"/>
+            <Separator orientation="VERTICAL">
+                <padding><Insets right="4.0" left="4.0"/></padding>
+            </Separator>
+            <Button text="まとめてZIP作成" fx:id="zip"/>
+
+            <Pane HBox.hgrow="ALWAYS" />
+            <Button text="フォルダ再スキャン" fx:id="reload"/>
         </ToolBar>
     </top>
     <center>
         <FlowPane fx:id="comicList" BorderPane.alignment="CENTER" hgap="2" vgap="2"/>
     </center>
+    <bottom>
+    </bottom>
 </BorderPane>
