[WIP] MainとDetailを整理して全体作業と単発作業をきっちり区分した

--- a/src/main/resources/to/sava/comicripper/cutter.fxml
+++ b/src/main/resources/to/sava/comicripper/cutter.fxml
@@ -19,7 +19,7 @@
         </VBox>
     </top>
     <center>
-        <StackPane fx:id="cutterScreen">
+        <StackPane>
             <ImageView fx:id="imageView"/>
             <Group fx:id="leftLine" styleClass="limitLine">
                 <HBox>
