--- a/src/main/resources/to/sava/comicripper/common.css
+++ b/src/main/resources/to/sava/comicripper/common.css
@@ -14,7 +14,7 @@
     -fx-border-width: 1;
 }
 
-.comic.selected {
+.comic .selected {
     -fx-background-color: antiquewhite;
     -fx-border-color: black;
     -fx-border-width: 1;
@@ -26,6 +26,11 @@
 
 .comic.dragover {
     -fx-border-color: red;
+}
+
+.comic #author,
+.comic #title {
+    -fx-font-weight: bold;
 }
 
 #cutterScene Button {
