--- a/src/main/resources/to/sava/comicripper/common.css
+++ b/src/main/resources/to/sava/comicripper/common.css
@@ -14,6 +14,10 @@
     -fx-border-width: 1;
 }
 
+.statusBar {
+    -fx-background-color: #e0e0e0;
+}
+
 .comic.selected {
     -fx-background-color: antiquewhite;
     -fx-border-color: black;
