見た目とかちょっとだけ変更

--- a/src/main/resources/to/sava/comicripper/common.css
+++ b/src/main/resources/to/sava/comicripper/common.css
@@ -4,7 +4,10 @@
     -fx-font-weight: bold;
 }
 
-.main {
+#mainScene,
+#mainScene center,
+#comicList,
+#scrollPane {
     -fx-background-color: gray;
 }
 
