DetailWindow にファイルネーム表示を追加

--- a/src/main/resources/to/sava/comicripper/detail.fxml
+++ b/src/main/resources/to/sava/comicripper/detail.fxml
@@ -47,6 +47,9 @@
                     <Label fx:id="currentNumber" />
                     <Label text="/" />
                     <Label fx:id="pageNumber" />
+                    <Label text=" (" />
+                    <Label fx:id="filename" />
+                    <Label text=")" />
                 </HBox>
             </StackPane>
             <fx:include source="parts/separator.fxml" />
