--- a/src/main/resources/to/sava/comicripper/cutter.fxml
+++ b/src/main/resources/to/sava/comicripper/cutter.fxml
@@ -41,6 +41,10 @@
         <TilePane prefHeight="36.0" alignment="CENTER" hgap="8.0">
             <Button fx:id="doCutting" text="決定" />
             <Button fx:id="cancel" text="キャンセル"/>
+            <HBox fx:id="toDetailBox">
+                <fx:include source="parts/separator.fxml" />
+                <Button fx:id="toDetail" text="詳細画面へ"/>
+            </HBox>
         </TilePane>
     </bottom>
 </BorderPane>
