ePub ファイル一覧から著者名｜タイトルを吸い出す一括処理を実装

--- a/src/main/resources/to/sava/comicripper/main.fxml
+++ b/src/main/resources/to/sava/comicripper/main.fxml
@@ -26,6 +26,8 @@
             <Button text="フォルダ再スキャン" fx:id="reload"/>
             <fx:include source="parts/separator.fxml"/>
             <Button text="一括命名" fx:id="nameAll"/>
+            <fx:include source="parts/separator.fxml"/>
+            <Button text="epub命名" fx:id="nameEpub"/>
         </ToolBar>
     </top>
     <center>
